# MlClassificationProject

./: .gitignore  pyproject.toml
MlClassificationProject/: main.py  modelwork.py  sementic.py
